feat: etape 2 frame et autres trucs OK + readme